APIs/apicurio.local/registry/1.3.2.Final/python-client/README.md
# openapi-client
Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers (schema and file descriptor)
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Note**: The Apicurio Registry REST API is available from `http://MY-REGISTRY-URL/api`. You must prefix all API operation paths with `/api`, for example, `api/ids/{globalId}`.


This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.3.2.Final
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to http://apicurio.local
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "http://apicurio.local"
)



# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.ArtifactRulesApi(api_client)
    artifact_id = 'artifact_id_example' # str | The artifact ID.  Can be a string (client-provided) or integer (server-generated) representing the unique artifact identifier.
    rule = openapi_client.Rule() # Rule | 

    try:
        # Create artifact rule
        api_instance.create_artifact_rule(artifact_id, rule)
    except ApiException as e:
        print("Exception when calling ArtifactRulesApi->create_artifact_rule: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*ArtifactRulesApi* | [**create_artifact_rule**](docs/ArtifactRulesApi.md#create_artifact_rule) | **POST** /artifacts/{artifactId}/rules | Create artifact rule
*ArtifactRulesApi* | [**delete_artifact_rule**](docs/ArtifactRulesApi.md#delete_artifact_rule) | **DELETE** /artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ArtifactRulesApi* | [**delete_artifact_rules**](docs/ArtifactRulesApi.md#delete_artifact_rules) | **DELETE** /artifacts/{artifactId}/rules | Delete artifact rules
*ArtifactRulesApi* | [**get_artifact_rule_config**](docs/ArtifactRulesApi.md#get_artifact_rule_config) | **GET** /artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ArtifactRulesApi* | [**list_artifact_rules**](docs/ArtifactRulesApi.md#list_artifact_rules) | **GET** /artifacts/{artifactId}/rules | List artifact rules
*ArtifactRulesApi* | [**test_update_artifact**](docs/ArtifactRulesApi.md#test_update_artifact) | **PUT** /artifacts/{artifactId}/test | Test update artifact
*ArtifactRulesApi* | [**update_artifact_rule_config**](docs/ArtifactRulesApi.md#update_artifact_rule_config) | **PUT** /artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ArtifactsApi* | [**create_artifact**](docs/ArtifactsApi.md#create_artifact) | **POST** /artifacts | Create artifact
*ArtifactsApi* | [**delete_artifact**](docs/ArtifactsApi.md#delete_artifact) | **DELETE** /artifacts/{artifactId} | Delete artifact
*ArtifactsApi* | [**get_artifact_by_global_id**](docs/ArtifactsApi.md#get_artifact_by_global_id) | **GET** /ids/{globalId} | Get artifact by global ID
*ArtifactsApi* | [**get_latest_artifact**](docs/ArtifactsApi.md#get_latest_artifact) | **GET** /artifacts/{artifactId} | Get latest artifact
*ArtifactsApi* | [**list_artifacts**](docs/ArtifactsApi.md#list_artifacts) | **GET** /artifacts | List all artifact IDs
*ArtifactsApi* | [**search_artifacts_0**](docs/ArtifactsApi.md#search_artifacts_0) | **GET** /search/artifacts | Search for artifacts
*ArtifactsApi* | [**update_artifact**](docs/ArtifactsApi.md#update_artifact) | **PUT** /artifacts/{artifactId} | Update artifact
*ArtifactsApi* | [**update_artifact_state**](docs/ArtifactsApi.md#update_artifact_state) | **PUT** /artifacts/{artifactId}/state | Update artifact state
*GlobalRulesApi* | [**create_global_rule**](docs/GlobalRulesApi.md#create_global_rule) | **POST** /rules | Create global rule
*GlobalRulesApi* | [**delete_all_global_rules**](docs/GlobalRulesApi.md#delete_all_global_rules) | **DELETE** /rules | Delete all global rules
*GlobalRulesApi* | [**delete_global_rule**](docs/GlobalRulesApi.md#delete_global_rule) | **DELETE** /rules/{rule} | Delete global rule
*GlobalRulesApi* | [**get_global_rule_config**](docs/GlobalRulesApi.md#get_global_rule_config) | **GET** /rules/{rule} | Get global rule configuration
*GlobalRulesApi* | [**list_global_rules**](docs/GlobalRulesApi.md#list_global_rules) | **GET** /rules | List global rules
*GlobalRulesApi* | [**update_global_rule_config**](docs/GlobalRulesApi.md#update_global_rule_config) | **PUT** /rules/{rule} | Update global rule configuration
*MetadataApi* | [**delete_artifact_version_meta_data**](docs/MetadataApi.md#delete_artifact_version_meta_data) | **DELETE** /artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*MetadataApi* | [**get_artifact_meta_data**](docs/MetadataApi.md#get_artifact_meta_data) | **GET** /artifacts/{artifactId}/meta | Get artifact metadata
*MetadataApi* | [**get_artifact_meta_data_by_content**](docs/MetadataApi.md#get_artifact_meta_data_by_content) | **POST** /artifacts/{artifactId}/meta | Get artifact metadata by content
*MetadataApi* | [**get_artifact_meta_data_by_global_id**](docs/MetadataApi.md#get_artifact_meta_data_by_global_id) | **GET** /ids/{globalId}/meta | Get global artifact metadata
*MetadataApi* | [**get_artifact_version_meta_data**](docs/MetadataApi.md#get_artifact_version_meta_data) | **GET** /artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*MetadataApi* | [**update_artifact_meta_data**](docs/MetadataApi.md#update_artifact_meta_data) | **PUT** /artifacts/{artifactId}/meta | Update artifact metadata
*MetadataApi* | [**update_artifact_version_meta_data**](docs/MetadataApi.md#update_artifact_version_meta_data) | **PUT** /artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*SearchApi* | [**search_artifacts**](docs/SearchApi.md#search_artifacts) | **GET** /search/artifacts | Search for artifacts
*SearchApi* | [**search_versions**](docs/SearchApi.md#search_versions) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*VersionsApi* | [**create_artifact_version**](docs/VersionsApi.md#create_artifact_version) | **POST** /artifacts/{artifactId}/versions | Create artifact version
*VersionsApi* | [**get_artifact_version**](docs/VersionsApi.md#get_artifact_version) | **GET** /artifacts/{artifactId}/versions/{version} | Get artifact version
*VersionsApi* | [**list_artifact_versions**](docs/VersionsApi.md#list_artifact_versions) | **GET** /artifacts/{artifactId}/versions | List artifact versions
*VersionsApi* | [**search_versions_0**](docs/VersionsApi.md#search_versions_0) | **GET** /search/artifacts/{artifactId}/versions | Search artifact versions
*VersionsApi* | [**update_artifact_version_state**](docs/VersionsApi.md#update_artifact_version_state) | **PUT** /artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation For Models

 - [ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ArtifactState](docs/ArtifactState.md)
 - [ArtifactType](docs/ArtifactType.md)
 - [EditableMetaData](docs/EditableMetaData.md)
 - [Error](docs/Error.md)
 - [Rule](docs/Rule.md)
 - [RuleType](docs/RuleType.md)
 - [SearchOver](docs/SearchOver.md)
 - [SearchedArtifact](docs/SearchedArtifact.md)
 - [SearchedVersion](docs/SearchedVersion.md)
 - [SortOrder](docs/SortOrder.md)
 - [UpdateState](docs/UpdateState.md)
 - [VersionMetaData](docs/VersionMetaData.md)
 - [VersionSearchResults](docs/VersionSearchResults.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization

Endpoints do not require authorization.


## Author

apicurio@lists.jboss.org


