APIs/apicurio.local/registry/2.4.x/python-client/README.md
# openapi-client
Apicurio Registry is a datastore for standard event schemas and API designs. Apicurio Registry enables developers to manage and share the structure of their data using a REST interface. For example, client applications can dynamically push or pull the latest updates to or from the registry without needing to redeploy. Apicurio Registry also enables developers to create rules that govern how registry content can evolve over time. For example, this includes rules for content validation and version compatibility.

The Apicurio Registry REST API enables client applications to manage the artifacts in the registry. This API provides create, read, update, and delete operations for schema and API artifacts, rules, versions, and metadata. 

The supported artifact types include:
- Apache Avro schema
- AsyncAPI specification
- Google protocol buffers
- GraphQL schema
- JSON Schema
- Kafka Connect schema
- OpenAPI specification
- Web Services Description Language
- XML Schema Definition


**Important**: The Apicurio Registry REST API is available from `https://MY-REGISTRY-URL/apis/registry/v2` by default. Therefore you must prefix all API operation paths with `../apis/registry/v2` in this case. For example: `../apis/registry/v2/ids/globalIds/{globalId}`.


This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.4.x
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://github.com/apicurio/apicurio-registry](https://github.com/apicurio/apicurio-registry)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to http://apicurio.local
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "http://apicurio.local"
)



# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AdminApi(api_client)
    rule = openapi_client.Rule() # Rule | 

    try:
        # Create global rule
        api_instance.create_global_rule_0(rule)
    except ApiException as e:
        print("Exception when calling AdminApi->create_global_rule_0: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *http://apicurio.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdminApi* | [**create_global_rule_0**](docs/AdminApi.md#create_global_rule_0) | **POST** /admin/rules | Create global rule
*AdminApi* | [**create_role_mapping**](docs/AdminApi.md#create_role_mapping) | **POST** /admin/roleMappings | Create a new role mapping
*AdminApi* | [**delete_all_global_rules_0**](docs/AdminApi.md#delete_all_global_rules_0) | **DELETE** /admin/rules | Delete all global rules
*AdminApi* | [**delete_global_rule_0**](docs/AdminApi.md#delete_global_rule_0) | **DELETE** /admin/rules/{rule} | Delete global rule
*AdminApi* | [**delete_role_mapping**](docs/AdminApi.md#delete_role_mapping) | **DELETE** /admin/roleMappings/{principalId} | Delete a role mapping
*AdminApi* | [**export_data**](docs/AdminApi.md#export_data) | **GET** /admin/export | Export registry data
*AdminApi* | [**get_config_property**](docs/AdminApi.md#get_config_property) | **GET** /admin/config/properties/{propertyName} | Get configuration property value
*AdminApi* | [**get_global_rule_config_0**](docs/AdminApi.md#get_global_rule_config_0) | **GET** /admin/rules/{rule} | Get global rule configuration
*AdminApi* | [**get_log_configuration**](docs/AdminApi.md#get_log_configuration) | **GET** /admin/loggers/{logger} | Get a single logger configuration
*AdminApi* | [**get_role_mapping**](docs/AdminApi.md#get_role_mapping) | **GET** /admin/roleMappings/{principalId} | Return a single role mapping
*AdminApi* | [**import_data**](docs/AdminApi.md#import_data) | **POST** /admin/import | Import registry data
*AdminApi* | [**list_artifact_types_0**](docs/AdminApi.md#list_artifact_types_0) | **GET** /admin/artifactTypes | List artifact types
*AdminApi* | [**list_config_properties**](docs/AdminApi.md#list_config_properties) | **GET** /admin/config/properties | List all configuration properties
*AdminApi* | [**list_global_rules_0**](docs/AdminApi.md#list_global_rules_0) | **GET** /admin/rules | List global rules
*AdminApi* | [**list_log_configurations**](docs/AdminApi.md#list_log_configurations) | **GET** /admin/loggers | List logging configurations
*AdminApi* | [**list_role_mappings**](docs/AdminApi.md#list_role_mappings) | **GET** /admin/roleMappings | List all role mappings
*AdminApi* | [**remove_log_configuration**](docs/AdminApi.md#remove_log_configuration) | **DELETE** /admin/loggers/{logger} | Removes logger configuration
*AdminApi* | [**reset_config_property**](docs/AdminApi.md#reset_config_property) | **DELETE** /admin/config/properties/{propertyName} | Reset a configuration property
*AdminApi* | [**set_log_configuration**](docs/AdminApi.md#set_log_configuration) | **PUT** /admin/loggers/{logger} | Set a logger&#39;s configuration
*AdminApi* | [**update_config_property**](docs/AdminApi.md#update_config_property) | **PUT** /admin/config/properties/{propertyName} | Update a configuration property
*AdminApi* | [**update_global_rule_config_0**](docs/AdminApi.md#update_global_rule_config_0) | **PUT** /admin/rules/{rule} | Update global rule configuration
*AdminApi* | [**update_role_mapping**](docs/AdminApi.md#update_role_mapping) | **PUT** /admin/roleMappings/{principalId} | Update a role mapping
*ArtifactTypeApi* | [**list_artifact_types**](docs/ArtifactTypeApi.md#list_artifact_types) | **GET** /admin/artifactTypes | List artifact types
*ArtifactRulesApi* | [**create_artifact_rule**](docs/ArtifactRulesApi.md#create_artifact_rule) | **POST** /groups/{groupId}/artifacts/{artifactId}/rules | Create artifact rule
*ArtifactRulesApi* | [**delete_artifact_rule**](docs/ArtifactRulesApi.md#delete_artifact_rule) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Delete artifact rule
*ArtifactRulesApi* | [**delete_artifact_rules**](docs/ArtifactRulesApi.md#delete_artifact_rules) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/rules | Delete artifact rules
*ArtifactRulesApi* | [**get_artifact_rule_config**](docs/ArtifactRulesApi.md#get_artifact_rule_config) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Get artifact rule configuration
*ArtifactRulesApi* | [**list_artifact_rules**](docs/ArtifactRulesApi.md#list_artifact_rules) | **GET** /groups/{groupId}/artifacts/{artifactId}/rules | List artifact rules
*ArtifactRulesApi* | [**test_update_artifact**](docs/ArtifactRulesApi.md#test_update_artifact) | **PUT** /groups/{groupId}/artifacts/{artifactId}/test | Test update artifact
*ArtifactRulesApi* | [**update_artifact_rule_config**](docs/ArtifactRulesApi.md#update_artifact_rule_config) | **PUT** /groups/{groupId}/artifacts/{artifactId}/rules/{rule} | Update artifact rule configuration
*ArtifactsApi* | [**create_artifact**](docs/ArtifactsApi.md#create_artifact) | **POST** /groups/{groupId}/artifacts | Create artifact
*ArtifactsApi* | [**delete_artifact**](docs/ArtifactsApi.md#delete_artifact) | **DELETE** /groups/{groupId}/artifacts/{artifactId} | Delete artifact
*ArtifactsApi* | [**delete_artifacts_in_group**](docs/ArtifactsApi.md#delete_artifacts_in_group) | **DELETE** /groups/{groupId}/artifacts | Delete artifacts in group
*ArtifactsApi* | [**get_content_by_global_id**](docs/ArtifactsApi.md#get_content_by_global_id) | **GET** /ids/globalIds/{globalId} | Get artifact by global ID
*ArtifactsApi* | [**get_content_by_hash**](docs/ArtifactsApi.md#get_content_by_hash) | **GET** /ids/contentHashes/{contentHash}/ | Get artifact content by SHA-256 hash
*ArtifactsApi* | [**get_content_by_id**](docs/ArtifactsApi.md#get_content_by_id) | **GET** /ids/contentIds/{contentId}/ | Get artifact content by ID
*ArtifactsApi* | [**get_latest_artifact**](docs/ArtifactsApi.md#get_latest_artifact) | **GET** /groups/{groupId}/artifacts/{artifactId} | Get latest artifact
*ArtifactsApi* | [**list_artifacts_in_group**](docs/ArtifactsApi.md#list_artifacts_in_group) | **GET** /groups/{groupId}/artifacts | List artifacts in group
*ArtifactsApi* | [**references_by_content_hash**](docs/ArtifactsApi.md#references_by_content_hash) | **GET** /ids/contentHashes/{contentHash}/references | List artifact references by hash
*ArtifactsApi* | [**references_by_content_id**](docs/ArtifactsApi.md#references_by_content_id) | **GET** /ids/contentIds/{contentId}/references | List artifact references by content ID
*ArtifactsApi* | [**references_by_global_id**](docs/ArtifactsApi.md#references_by_global_id) | **GET** /ids/globalIds/{globalId}/references | List artifact references by global ID
*ArtifactsApi* | [**search_artifacts_0**](docs/ArtifactsApi.md#search_artifacts_0) | **GET** /search/artifacts | Search for artifacts
*ArtifactsApi* | [**search_artifacts_by_content_0**](docs/ArtifactsApi.md#search_artifacts_by_content_0) | **POST** /search/artifacts | Search for artifacts by content
*ArtifactsApi* | [**update_artifact**](docs/ArtifactsApi.md#update_artifact) | **PUT** /groups/{groupId}/artifacts/{artifactId} | Update artifact
*ArtifactsApi* | [**update_artifact_state**](docs/ArtifactsApi.md#update_artifact_state) | **PUT** /groups/{groupId}/artifacts/{artifactId}/state | Update artifact state
*GlobalRulesApi* | [**create_global_rule**](docs/GlobalRulesApi.md#create_global_rule) | **POST** /admin/rules | Create global rule
*GlobalRulesApi* | [**delete_all_global_rules**](docs/GlobalRulesApi.md#delete_all_global_rules) | **DELETE** /admin/rules | Delete all global rules
*GlobalRulesApi* | [**delete_global_rule**](docs/GlobalRulesApi.md#delete_global_rule) | **DELETE** /admin/rules/{rule} | Delete global rule
*GlobalRulesApi* | [**get_global_rule_config**](docs/GlobalRulesApi.md#get_global_rule_config) | **GET** /admin/rules/{rule} | Get global rule configuration
*GlobalRulesApi* | [**list_global_rules**](docs/GlobalRulesApi.md#list_global_rules) | **GET** /admin/rules | List global rules
*GlobalRulesApi* | [**update_global_rule_config**](docs/GlobalRulesApi.md#update_global_rule_config) | **PUT** /admin/rules/{rule} | Update global rule configuration
*GroupsApi* | [**create_group**](docs/GroupsApi.md#create_group) | **POST** /groups | Create a new group
*GroupsApi* | [**delete_group_by_id**](docs/GroupsApi.md#delete_group_by_id) | **DELETE** /groups/{groupId} | Delete a group by the specified ID.
*GroupsApi* | [**get_group_by_id**](docs/GroupsApi.md#get_group_by_id) | **GET** /groups/{groupId} | Get a group by the specified ID.
*GroupsApi* | [**list_groups**](docs/GroupsApi.md#list_groups) | **GET** /groups | List groups
*MetadataApi* | [**delete_artifact_version_meta_data**](docs/MetadataApi.md#delete_artifact_version_meta_data) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Delete artifact version metadata
*MetadataApi* | [**get_artifact_meta_data**](docs/MetadataApi.md#get_artifact_meta_data) | **GET** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact metadata
*MetadataApi* | [**get_artifact_owner**](docs/MetadataApi.md#get_artifact_owner) | **GET** /groups/{groupId}/artifacts/{artifactId}/owner | Get artifact owner
*MetadataApi* | [**get_artifact_version_meta_data**](docs/MetadataApi.md#get_artifact_version_meta_data) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Get artifact version metadata
*MetadataApi* | [**get_artifact_version_meta_data_by_content**](docs/MetadataApi.md#get_artifact_version_meta_data_by_content) | **POST** /groups/{groupId}/artifacts/{artifactId}/meta | Get artifact version metadata by content
*MetadataApi* | [**update_artifact_meta_data**](docs/MetadataApi.md#update_artifact_meta_data) | **PUT** /groups/{groupId}/artifacts/{artifactId}/meta | Update artifact metadata
*MetadataApi* | [**update_artifact_owner**](docs/MetadataApi.md#update_artifact_owner) | **PUT** /groups/{groupId}/artifacts/{artifactId}/owner | Update artifact owner
*MetadataApi* | [**update_artifact_version_meta_data**](docs/MetadataApi.md#update_artifact_version_meta_data) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/meta | Update artifact version metadata
*SearchApi* | [**search_artifacts**](docs/SearchApi.md#search_artifacts) | **GET** /search/artifacts | Search for artifacts
*SearchApi* | [**search_artifacts_by_content**](docs/SearchApi.md#search_artifacts_by_content) | **POST** /search/artifacts | Search for artifacts by content
*SystemApi* | [**get_resource_limits**](docs/SystemApi.md#get_resource_limits) | **GET** /system/limits | Get resource limits information
*SystemApi* | [**get_system_info**](docs/SystemApi.md#get_system_info) | **GET** /system/info | Get system information
*UsersApi* | [**get_current_user_info**](docs/UsersApi.md#get_current_user_info) | **GET** /users/me | Get current user
*VersionsApi* | [**create_artifact_version**](docs/VersionsApi.md#create_artifact_version) | **POST** /groups/{groupId}/artifacts/{artifactId}/versions | Create artifact version
*VersionsApi* | [**delete_artifact_version**](docs/VersionsApi.md#delete_artifact_version) | **DELETE** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Delete artifact version
*VersionsApi* | [**get_artifact_version**](docs/VersionsApi.md#get_artifact_version) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version} | Get artifact version
*VersionsApi* | [**get_artifact_version_references**](docs/VersionsApi.md#get_artifact_version_references) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/references | Get artifact version
*VersionsApi* | [**list_artifact_versions**](docs/VersionsApi.md#list_artifact_versions) | **GET** /groups/{groupId}/artifacts/{artifactId}/versions | List artifact versions
*VersionsApi* | [**update_artifact_version_state**](docs/VersionsApi.md#update_artifact_version_state) | **PUT** /groups/{groupId}/artifacts/{artifactId}/versions/{version}/state | Update artifact version state


## Documentation For Models

 - [ArtifactContent](docs/ArtifactContent.md)
 - [ArtifactMetaData](docs/ArtifactMetaData.md)
 - [ArtifactOwner](docs/ArtifactOwner.md)
 - [ArtifactReference](docs/ArtifactReference.md)
 - [ArtifactSearchResults](docs/ArtifactSearchResults.md)
 - [ArtifactState](docs/ArtifactState.md)
 - [ArtifactTypeInfo](docs/ArtifactTypeInfo.md)
 - [ConfigurationProperty](docs/ConfigurationProperty.md)
 - [CreateGroupMetaData](docs/CreateGroupMetaData.md)
 - [DownloadRef](docs/DownloadRef.md)
 - [EditableMetaData](docs/EditableMetaData.md)
 - [Error](docs/Error.md)
 - [GroupMetaData](docs/GroupMetaData.md)
 - [GroupSearchResults](docs/GroupSearchResults.md)
 - [IfExists](docs/IfExists.md)
 - [Limits](docs/Limits.md)
 - [LogConfiguration](docs/LogConfiguration.md)
 - [LogLevel](docs/LogLevel.md)
 - [NamedLogConfiguration](docs/NamedLogConfiguration.md)
 - [RoleMapping](docs/RoleMapping.md)
 - [RoleType](docs/RoleType.md)
 - [Rule](docs/Rule.md)
 - [RuleType](docs/RuleType.md)
 - [RuleViolationCause](docs/RuleViolationCause.md)
 - [RuleViolationError](docs/RuleViolationError.md)
 - [SearchedArtifact](docs/SearchedArtifact.md)
 - [SearchedGroup](docs/SearchedGroup.md)
 - [SearchedVersion](docs/SearchedVersion.md)
 - [SortBy](docs/SortBy.md)
 - [SortOrder](docs/SortOrder.md)
 - [SystemInfo](docs/SystemInfo.md)
 - [UpdateConfigurationProperty](docs/UpdateConfigurationProperty.md)
 - [UpdateRole](docs/UpdateRole.md)
 - [UpdateState](docs/UpdateState.md)
 - [UserInfo](docs/UserInfo.md)
 - [VersionMetaData](docs/VersionMetaData.md)
 - [VersionSearchResults](docs/VersionSearchResults.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization

Endpoints do not require authorization.


## Author

apicurio@lists.jboss.org


